# sample

./: .gitignore  README.md
autotools_sample/: README.md
autotools_sample/sample1/: Makefile.am  Makefile.in  autotools.sh  config.h  config.status  configure  configure.ac  main.c
autotools_sample/sample2/: Makefile.in  config.status  configure  configure.ac
autotools_sample/sample3/: Makefile.am  Makefile.in  am.conf  autotools.sh  config.h  config.status  configure  configure.ac  libtool
autotools_sample/sample3/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
autotools_sample/sample3/include/: Makefile.am  Makefile.in
autotools_sample/sample3/lib/: Makefile.am  Makefile.in  misc.c
autotools_sample/sample3/lib/.deps/: misc.Plo
batch_sample/: README.md  itr.bat
batch_sample/batch2cygwinshell/: echo.bat  echo.sh  hello.bat
batch_sample/batch2powershell/: echo.bat
batch_sample/svg2eps/: svg2eps.bat
boost_sample/Boost.Python_sample/: basic.cpp  basic2.cpp  makefile  returning_object.cpp
chef_sample/sample1/: .gitignore  localhost.json.template  solo.rb.template
cmake_sample/: .gitignore  README.md
cmake_sample/prog1/: .gitignore  CMakeLists.txt
cmake_sample/prog2/: CMakeLists.txt  prog1.cc  prog2.cc
cmake_sample/prog3/: CMakeLists.txt  distance.cc  distance.h  prog3.cc
cmake_sample/prog4/: .gitignore  CMakeLists.txt  Prog4Config.h  Prog4Config.h.in  prog4.cc
cmake_sample/prog5/: .gitignore  CMakeLists.txt  prog5.cc
cmake_sample/prog6/: .gitignore  CMakeLists.txt  prog6.cc
cmake_sample/sample1/: CMakeLists.txt
cmake_sample/sample2/: CMakeLists.txt
cmake_sample/sample2/include/: func_a.h  misc.h
cmake_sample/sample2/t/: main.c
cmake_sample/sample3/: geom.cpp  geom.gcda  geom.gcno  hello_cpputest  hello_cpputest.cpp  hello_cpputest.gcda  hello_cpputest.gcno  makefile
cmake_sample/sample4/: CMakeLists.txt
cmake_sample/test_fortran/: CMakeLists.txt  main.c  main.f
django_sample/tutorial/: README.md
docker-sample/: README.md
docker-sample/3step_tutorial/: ReadMe.md
docker-sample/doxygen/: Makefile
docker-sample/offline/: Makefile  README.md  docker-compose.yml
docker-sample/online/: Makefile
doxygen_sample/: Doxyfile  fileio.cpp  lei_fileutil.h
excel_sample/: graph_compare.xlsx  macro_function.xlsm  macro_interpolation.txt  macro_interpolation.xlsm
flymake_sample/: README.md
flymake_sample/test2/: README.md  test.cpp
flymake_sample/test3/: test.cpp  test.hpp
gnuplot_sample/: file.gp  graph.gp
gstreamer_sample/: makefile
gtest_sample/: README.md
gtest_sample/gtest-samples/: CMakeLists.txt  build.sh
gtk+_sample/: README.md
jenkinsfile_sample/: .gitignore  Jenkinsfile  Makefile  README.md  geom.cpp  geom.h  hello_cpputest.cpp
keyhac_sample/: config.py
makefile_sample/: README.md
makefile_sample/sample1/: func_a.c  makefile  prog_main.c
makefile_sample/sample2/: mk.conf
makefile_sample/sample3/: mk.conf
octave_sample/: README.md
octave_sample/arduino/: README.md
octave_sample/blas-lapack/: .gitignore  benchmark.m  main.sh
octave_sample/fft/: dtft.m  fft_sample1.m  fft_sample2.m  fft_sample3.m  invdtft.m
octave_sample/fft_jspmatlab/: dft.m  dtft.m  fft_jspmatlab1.m  fft_jspmatlab2.m  idft.m  idftv2.m  invdtft.m  ramp.m  realexp.m  recfft.m  unitimp.m  unitstep.m
octave_sample/instrument-control/: README.md  loadpkg.m  makefile  sample_serial.m
octave_sample/matlab_doc/: README.md
octave_sample/plot/: sample_plot1.m
octave_sample/work/: lqi.m  lqry.m  reg.m  track.m
opencv_sample/opencv-python-tutorial/: README.md
paraview_sample/: README.md
paraview_sample/my_sample/: acoustic-mode-view.py  evanescent-view.py  structure-mode-view.py
python_sample/blockchain/: blockchain.py
python_sample/joystick/: Readme.md  main.py
python_sample/pandas/: 002-1.csv  002-2.csv  002-3.csv  002-4.csv  002-5.csv  cross.csv  test.csv
python_sample/pygame/: README.md
python_sample/pyqt/: README.md  thread1_moveToThread.py  thread2_run_override.py  thread3_moveToThread_ex.py
python_sample/scapy/: client.py  makefile  scapy_socket.py  server.py  spooling_packet.py
python_sample/scraping/: getNikkeiHeikin.py  getNikkeiWebPageTitle.py
python_sample/sochet/: client.py  server.py
python_sample/sochet2/: README.md  asyncioserver.py  eventletserver.py  multithread.py  nonblocksinglethread.py  singlethread.py
python_sample/urllib/: http_get.py  http_get2.py
qt_sample/QtDesigner-PyQt-Sample/: README.md  designer.py  designer.ui  main.py
qt_sample/pyqt-tutorial/: hello.py
sh_sample/: README.md  exam1-plot.sh  post.sh  pre.sh
sh_sample/jsces/: .gitignore  shell01a.sh  shell06.sh  shell11.sh  shell12.sh
shell_sample/: README.md  img_scaling.ps1  img_scaling.sh  reduce.sh  transJIScsv.sh
shell_sample/align_imgsize/: align_imgsize.bat  align_imgsize.ps1
shell_sample/bash_setting/: .gitignore  bashrc.sh  makefile  profile.sh  uninstall.sh
shell_sample/bat2ps1/: echo.bat  echo.ps1  hello.bat  hello.ps1  hello_standalone.bat
shell_sample/bat2sh/: README.md  echo.bat  hello.bat
shell_sample/clear_background/: README.md  clear_background.bat  clear_background.ps1  clear_background.scm  clear_background.sh
shell_sample/jsces/: README.md  cfile.sh  makefile  (+4 more)
vtk_sample/: README.md
(+157 files in other folders)
